# Scan Comments Edge Function - Recent Changes

- 2025-09-07: Prevent duplicate submissions during adjudication polling
  - Added `checkStatusOnly` request flag to enable status polling without re-running scans or re-emitting batches.
  - Frontend now sets `checkStatusOnly: true` during Phase 2 polling to avoid duplicate batch submissions.
  - Response normalization: ensured batch hints (`batchStart`, `hasMore`) remain consistent for status-only responses.

## Latest Updates

### Enhanced Token Counting and Batch Sizing
- **Precise Token Counting**: Implemented more accurate token estimation based on model characteristics
- **Dynamic Batch Sizing**: Optimized batch sizes using I/O ratios and actual token limits
- **Safety Margins**: Added configurable safety margins to prevent hitting token limits
- **Performance Monitoring**: Added detailed timing and performance metrics

### Improved Adjudication System
- **Backend-Only Adjudication**: Removed client-side adjudicator calls; backend triggers adjudication and returns results
- **Batch Processing**: Adjudication processes comments in batches for efficiency
- **Duplicate Prevention**: Enhanced duplicate detection across function instances and DB log checks
- **Free Adjudication**: Adjudication remains free (no credit consumption)
- **Better Error Handling**: Improved error recovery and fallback mechanisms

### Enhanced AI Provider Support
- **AWS Bedrock Integration**: Full support for Claude, Llama, and Titan models
- **AWS Signature V4**: Proper authentication for Bedrock API calls
- **Model-Specific Token Counting**: Different token estimation for each model type
- **Temperature Configuration**: Support for configurable temperature per model

### Rate Limiting Improvements
- **TPM/RPM Tracking**: Comprehensive rate limit monitoring
- **Automatic Waiting**: Smart waiting when approaching rate limits
- **Cross-Instance Coordination**: Rate limiting works across multiple function instances